# axum-cometd

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
cometd-client-playground-js/: package.json
cometd-client-playground-js/src/: app.ts
cometd-server-playground-js/: package.json  tsconfig.json
cometd-server-playground-js/src/: app.ts
dumps/: README  publish.sh  subscribe.sh
dumps/jsons/: 2_server_handshake_response.json  3.1_client_subscribe_request.json  3.2_client_connect_request.json  4.1_server_subscribe_response.json  4.2_server_connect_response.json  6_client_disconnect_request.json
dumps/publish/: wireshark.pcapng
dumps/publish/json/: 1_client_publish_request.json  2_server_publish_response.json  server_publish_response_no_handshake.json
dumps/shell/: client_id.sh  pub_sub.sh  publish.sh  subscribe.sh
dumps/shell/json/: connect.json  handshake.json  pub_sub.json  publish.json  subscribe.json
dumps/subscribe/: wireshark.pcapng
dumps/subscribe/jsons/: 1_client_handshake_request.json  5_client_connect_request.json  5_server_connect_response.json
examples/server/: Cargo.toml
examples/server/src/: main.rs
examples/test-common/: Cargo.toml
examples/test-common/src/: client_mock.rs  consts.rs  lib.rs  response_ext.rs  send_channel_names.rs  subscribe_channel_names.rs  wildnames.rs
k6-test/: .gitignore  package.json  webpack.config.js
k6-test/src/: envs.js  main.js
src/: consts.rs  context.rs  error.rs  ext.rs  handlers.rs  lib.rs  messages.rs  receiver_ext.rs  sugar.rs  types.rs  utils.rs
src/context/: build_router.rs  builder.rs  subscription_task.rs
src/error/: http_handler_error.rs
src/ext/: check.rs  cookie_jar.rs  receiver_ext.rs
src/handlers/: connect.rs  disconnect.rs  handshake.rs  subscribe.rs  test.rs
src/handlers/connect/: meta_connect.rs  publish.rs  wait_message.rs
src/handlers/test/: connect.rs  wildcard.rs
src/messages/: de.rs  test.rs
src/sugar/: broadcast.rs
src/types/: callback.rs  callback_args.rs  channel.rs  client_id.rs  client_receiver.rs  client_sender.rs  cookie_id.rs  error.rs  events.rs  id.rs  messages.rs  subscription_id.rs
src/types/channel/: custom_data_sender.rs  receiver.rs
src/types/client_sender/: client_timeout.rs
src/types/error/: http_handler_error.rs  parse_error.rs  send_error.rs
src/types/messages/: de.rs
src/utils/: channel_name_validation.rs  test.rs  wildnames.rs  wildnames_cache.rs
src/utils/test/: test_channel_name_validation.rs  test_get_wildnames.rs  test_send_channel_name_validation.rs  test_subscribe_channel_name_validation.rs
tests/: test_client_timeout.rs  test_connect.rs  test_connect_handler.rs  test_disconnect.rs  test_handshake.rs  test_publish.rs  test_router.rs  test_subscribe.rs  test_wildcards.rs
