[package]
name = "axum-cometd"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/BratSinot/axum-cometd"
homepage = "https://github.com/BratSinot/axum-cometd"
description = "Framework for CometD server creation"
categories = ["web-programming"]
keywords = ["http", "cometd", "axum"]

[workspace]
members = [
    "./examples/test-common",
    "./examples/server"
]

[features]
test = []

[dependencies]
ahash = "0.8.2"
async-broadcast = "0.4.1"
axum = { version = "0.6.1", default-features = false, features = ["http1", "json"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "2.1.0", default-features = false, features = ["macros"] }
thiserror = "1.0.37"
tokio-util = "0.7.4"
tokio = { version = "1", features = ["macros", "sync", "rt"] }
tower-http = { version = "0.3.4", features = ["timeout"] }
tower-service = "0.3"
tracing = "0.1.37"

[dev-dependencies]
axum-cometd = { path = "./", features = ["test"] }
test-common = { path = "./examples/test-common" }
tower = { version = "0.4.13", default-features = false }
hyper = "0.14.23"
