[package]
name = "axum-cometd"
version = "0.6.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/BratSinot/axum-cometd"
homepage = "https://github.com/BratSinot/axum-cometd"
description = "Framework for CometD server creation"
categories = ["web-programming"]
keywords = ["http", "cometd", "axum"]

[workspace]
members = [
    "./examples/test-common",
    "./examples/server"
]

[features]

[dependencies]
ahash = "0.8"
axum = { version = "0.6", default-features = false, features = ["http1", "http2", "json"] }
once_cell = "1.16"
rand = "0.8"
regex = { version = "1", default-features = false, features = ["std", "perf"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "2.1", default-features = false, features = ["macros"] }
thiserror = "1.0"
tokio-util = "0.7"
tokio = { version = "1", features = ["macros", "sync", "rt", "time"] }
tower-service = "0.3"
tracing = "0.1"

[dev-dependencies]
test-common = { path = "./examples/test-common" }
hyper = "0.14"
tower = { version = "0.4", default-features = false }
