[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum-cometd = { path = "../../" }
axum = { version = "0.6.1", default-features = false }
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread", "time"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing = "0.1.37"
