[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum-cometd = { path = "../../" }
axum = { version = "0.6", default-features = false, features = ["tokio", "http1"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.22", features = ["macros", "rt-multi-thread", "time"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
